Undoes changes for news event left nav tab. Fixes issue #215: column spacing issue.

--- a/app/assets/stylesheets/components/left-nav.scss
+++ b/app/assets/stylesheets/components/left-nav.scss
@@ -1,6 +1,5 @@
 .leftNav {
   text-align: left;
-  min-width: 250px;
 
   .currentPage {
     font-weight: 800;
