--- a/app/assets/stylesheets/layout_old/primary-content.scss
+++ b/app/assets/stylesheets/layout_old/primary-content.scss
@@ -50,7 +50,7 @@
     .middleRightContainer {
       @include media($medium-screen) {
         float: right;
-        width: 65%;
+        width: 73%;
         padding-left: 10px;
       }
     }
